Resolve misaligned issue of icon on tab/mobile

--- a/src/blocks/info-box/style.scss
+++ b/src/blocks/info-box/style.scss
@@ -500,3 +500,8 @@ a.uagb-infbox__link-to-all {
 .uagb-disable-link {
 	pointer-events: none;
 }
+
+.uagb-iconbox-icon-wrap {
+	display: flex;
+	align-items: center;
+}
